--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,6 @@
 PORT = 5000
 MONGODB_URI = mongodb://localhost:27017/cuahangdientu
 JWT_SECRET = cuahangdientu
+EMAIL_APP_PASSWORD = ywiwrgjiuaozmzkc
+EMAIL_NAME= quangtrieu210697@gmail.com
+URL_SERVER= http://localhost:5000
