--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
